sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:4: error: ';' expected but symbol literal found.
tant qu'au moins l'un des parcours a inversé un élément
                  ^AlgCocktailSort1:21: error: ')' expected but ',' found.
	for (i<- 0, getNombreValeurs()-2)
                  ^AlgCocktailSort1:43: error: ')' expected but '}' found.
		}
                ^